# stack-proto-lisp

./: CMakeLists.txt  init.lsp  main.cpp  stack-proto-lisp.sln
stack-proto-lisp/: main.cpp  small.lsp  stack-proto-lisp.vcxproj
